--- a/app/src/main/res/layout/destination.xml
+++ b/app/src/main/res/layout/destination.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="150dp"
-    android:layout_height="270dp"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="20dp"
-    android:layout_marginVertical="5dp"
+    android:layout_marginVertical="10dp"
     >
 
     <androidx.cardview.widget.CardView
@@ -20,7 +20,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:background="#2F81A3"
+            android:background="#113C40"
+            android:paddingBottom="20dp"
             android:layout_height="match_parent">
 
             <androidx.cardview.widget.CardView
@@ -52,8 +53,9 @@
                 android:id="@+id/distName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 android:background="#00FFFFFF"
+                android:textAlignment="center"
                 android:fontFamily="@font/raleway_semibold"
                 android:text="Name"
                 android:textColor="@color/white"
@@ -70,7 +72,7 @@
                 android:fontFamily="@font/raleway_extralight"
                 android:text="Description"
                 android:textColor="@color/white"
-                android:textSize="10sp"
+                android:textSize="17sp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginBottom="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
