--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/gr_signin"
     android:layout_height="match_parent"
+    android:background="@drawable/gr_signin"
     android:padding="16dp"
     tools:context=".fragments.SignIn">
 
@@ -37,13 +36,13 @@
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/raleway_extralight"
-        android:text="Email"
+        android:text="@string/email"
         android:textColor="#FFF"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signInIcon"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/signInIcon" />
 
     <EditText
         android:id="@+id/usernameEditText"
@@ -53,6 +52,7 @@
         android:fontFamily="@font/raleway_extralight"
         android:hint="Please enter your email"
         android:inputType="textEmailAddress"
+        android:textColor="@color/white"
         android:textColorHint="#878787"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,23 +62,23 @@
         android:id="@+id/passwordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/raleway_extralight"
-        android:text="Password"
+        android:text="@string/password"
         android:textColor="#FFF"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
 
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="0dp"
         android:layout_height="50dp"
-
         android:layout_marginTop="10dp"
         android:fontFamily="@font/raleway_extralight"
         android:hint="Please enter your password"
         android:inputType="textPassword"
+        android:textColor="@color/white"
         android:textColorHint="#878787"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +95,16 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/white"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/signInButton"
+        app:layout_constraintEnd_toEndOf="@+id/signInButton"
+        app:layout_constraintStart_toStartOf="@+id/signInButton"
+        app:layout_constraintTop_toTopOf="@+id/signInButton" />
 
     <TextView
         android:id="@+id/rest"
@@ -104,23 +114,21 @@
         android:text="Don't have an account?"
         android:textColor="#FFF"
         android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/signInButton"
         app:layout_constraintBottom_toBottomOf="@+id/signInButton"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/signInButton" />
 
-  <TextView
-      android:id="@+id/signUpLink"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:layout_constraintTop_toTopOf="@id/rest"
-      app:layout_constraintLeft_toRightOf="@id/rest"
-      android:fontFamily="@font/raleway_extralight"
-      android:textColor="#697BDD"
-      android:textSize="15sp"
-      android:layout_marginLeft="5dp"
-      android:text="Sign Up Now!"/>
-
+    <TextView
+        android:id="@+id/signUpLink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:fontFamily="@font/raleway_extralight"
+        android:text="Sign Up Now!"
+        android:textColor="#697BDD"
+        android:textSize="15sp"
+        app:layout_constraintLeft_toRightOf="@id/rest"
+        app:layout_constraintTop_toTopOf="@id/rest" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
