--- a/app/src/main/res/layout/fragment_routs.xml
+++ b/app/src/main/res/layout/fragment_routs.xml
@@ -56,5 +56,17 @@
         app:layout_constraintBottom_toBottomOf="@+id/header"
         app:layout_constraintEnd_toEndOf="@+id/header" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#B4011627"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rview" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
