--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -76,4 +76,14 @@
         app:layout_constraintTop_toBottomOf="@+id/paymentMethodRadioGroup"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/black"
+        android:text="Pay Now"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/payNow"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
