--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -44,6 +44,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:textColor="@color/white"/>
 
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20EGP"
+                android:textSize="30sp"
+                android:fontFamily="@font/raleway_extralight"
+                app:layout_constraintTop_toBottomOf="@+id/date"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textColor="@color/white"/>
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
