--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -18,6 +18,7 @@
         app:cardCornerRadius="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/background"
             android:layout_width="match_parent"
             android:background="#273527"
             android:layout_height="match_parent">
@@ -53,6 +54,17 @@
                 android:fontFamily="@font/raleway_extralight"
                 app:layout_constraintTop_toBottomOf="@+id/date"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Status"
+                android:textSize="30sp"
+                android:fontFamily="@font/raleway_extralight"
+                app:layout_constraintTop_toBottomOf="@+id/date"
+                app:layout_constraintStart_toStartOf="parent"
                 android:textColor="@color/white"/>
 
 
